ffprobe: add missing separator when printing side data in compact output

Should fix ticket #7153

Signed-off-by: James Almer <jamrial@gmail.com>